2020-01-08  Stuart Caie <kyzer@cabextract.org.uk>

	* lzxd_decompress(): do not apply the E8 transformation on the
	32769th LZX frame! Thanks to Cezary Sliwa for discovering this
	bug and providing an example cab file (which is
	http://download.windowsupdate.com/d/msdownload/update/driver/
	drvs/2019/11/016c7f3e-809d-4720-893b-
	e0d74f10c39d_35e12507628e8dc8ae5fb3332835f4253d2dab23.cab)

        * cabd_compare: use EXPAND.EXE instead of EXTRACT.EXE when
	testing files in a directory called 'expand'. The example
	cab file above is extracted wrongly by EXTRACT.EXE, but
	correctly by EXPAND.EXE because they take different approaches
	to E8 transformations:

	- EXTRACT.EXE writes "E8E8E8E8E8E8' to the last 6 bytes of
	  frame, looks for E8 bytes up to the last 6 bytes, then restores
	  the last 6 bytes, leaving partial transforms of 1-3 bytes if
	  E8 byte is found near the end of the frame

	- EXPAND.EXE looks for E8 bytes up to the last 10 bytes of a
	  frame, therefore the last 6 bytes are never altered and all
	  transforms are 4 bytes

2019-02-18  Stuart Caie <kyzer@cabextract.org.uk>

	* chmd_read_headers(): a CHM file name beginning "::" but shorter
	than 33 bytes will lead to reading past the freshly-allocated name
	buffer - checks for specific control filenames didn't take length
	into account. Thanks to ADLab of Venustech for the report and
	proof of concept.

2019-02-18  Stuart Caie <kyzer@cabextract.org.uk>

	* chmd_read_headers(): CHM files can declare their chunks are any
	size up to 4GB, and libmspack will attempt to allocate that to
	read the file.

	This is not a security issue; libmspack doesn't promise how much
	memory it'll use to unpack files. You can set your own limits by
	returning NULL in a custom mspack_system.alloc() implementation.

	However, it would be good to validate chunk size further. With no
	offical specification, only empirical data is available. All files
	created by hhc.exe have a chunk size of 4096 bytes, and this is