@@ -8,7 +8,6 @@
 #include <stdlib.h>
 #include <string.h>
 #include <mspack.h>
-#include <system.h>
 
 #define __tf3(x) #x
 #define __tf2(x) __tf3(x)
